Minor improvement to autosuggest performance and fix issue navigating up and down a list. Fixed layout bug DHE-232

--- a/app/stylesheets/_shame.scss
+++ b/app/stylesheets/_shame.scss
@@ -37,6 +37,7 @@ strong {
 }
 
 hr {
+  clear: both;
   width: 100%;
 }
 
